--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           </h2>
 
           <img
-            src="./images/__image.jpg"
+            src="./images/image.jpg"
             alt="Vista panorâmica de uma paisagem"
           />
         </section>
