--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Sheyla Dias C. da Cunha" />
     <meta
       name="description"
-      content="Página responsiva sobre a cidade natal de integrantes da Tripleten"
+      content="Tripleten Art Gallery.Página responsiva sobre a cidade natal de integrantes da Tripleten"
     />
     <meta name="keywords" content="HTML, CSS, responsiva" />
-    <title>De Pátria para Pátria | Galeria de Arte TripleTen</title>
+    <title>De Pátria para Pátria - Tripleten Art Gallery</title>
 
-    <link rel="preconnect" href="https://rsms.me/" />
+    <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico" />
     <link rel="stylesheet" href="./pages/index.css" />
   </head>
 
@@ -23,34 +23,30 @@
           alt="Logotipo da Galeria de Arte TripleTen"
           class="header__logo"
         />
+        <h1 class="header__title">De Pátria para Pátria</h1>
+        <p class="header__subtitle">
+          Uma jornada épica do Kentucky ao Burundi pelo País de Gales e Ucrânia
+        </p>
+        <img
+          src="./images/image.jpg"
+          alt="Vista panorâmica de uma paisagem"
+          class="header__image"
+        />
       </header>
-
       <main class="content">
-        <section class="lead">
-          <h1 class="lead__title">De Pátria para Pátria</h1>
-          <h2 class="lead__subtitle">
-            Uma jornada épica do Kentucky ao Burundi pelo País de Gales e
-            Ucrânia
-          </h2>
-
-          <img
-            src="./images/image.jpg"
-            alt="Vista panorâmica de uma paisagem"
-          />
-        </section>
-
         <section class="intro">
           <h2 class="intro__title">
             Conheça um pouco mais sobre a localização dos seus amigos
           </h2>
-          <p class="intro__text-phrase">
-            Cada pessoa é um artista livre, chamado a transformar as condições,
-            pensamentos e estruturas que moldam nossas vidas.
-          </p>
+          <div class="intro__quote">
+            <blockquote class="intro__quote-text">
+              Cada pessoa é um artista livre, chamado a transformar as
+              condições, pensamentos e estruturas que moldam nossas vidas.
+            </blockquote>
+            <cite class="intro__quote-cite">— Joseph Beuys</cite>
+          </div>
 
-          <p class="intro__text-reference">— Joseph Beuys</p>
-
-          <p class="intro__text-introduction">
+          <p class="intro__text">
             A cidade de TripleTen reuniu profissionais de diversos cantos do
             mundo. Hoje, a Galeria de Arte TripleTen tem o orgulho de apresentar
             histórias e fotos de algumas das pessoas que dedicam seu tempo e
@@ -63,7 +59,6 @@
           </p>
         </section>
       </main>
-
       <footer class="footer">
         <p class="footer__copyright">© 2024 Sheyla Dias C. da Cunha</p>
       </footer>
