--- a/index.html
+++ b/index.html
@@ -58,9 +58,259 @@
             estamos felizes por você ser nosso vizinho.
           </p>
         </section>
+        <section class="photo-grid">
+          <ul class="photo-grid__galery">
+            <li class="photo-grid__galery-item">
+              <img
+                src="./images/photo-grid-1.jpg"
+                alt="Vista panorâmica de uma pequena cidade costeira, com casas próximas ao mar e colinas verdes e montanhosas ao fundo. O céu está nublado com áreas escuras, há um arco-íris visível à esquerda, perto do horizonte."
+                class="photo-grid__image"
+              />
+            </li>
+            <li class="photo-grid__galery-item">
+              <img
+                src="./images/photo-grid-2.jpg"
+                alt="Vista aérea de uma cidade costeira em um dia claro e ensolarado. Casas residenciais de vários estilos estão espalhadas ao longo da costa, com o mar calmo e vasto estendendo-se até o horizonte à esquerda."
+                class="photo-grid__image"
+              />
+            </li>
+            <li class="photo-grid__galery-item">
+              <img
+                src="./images/photo-grid-3.jpg"
+                alt="Vista de uma igreja com cúpulas e cruzes douradas no topo, ao entardecer. O céu está tingido de tons laranja e dourado, indicando o pôr do sol. O edifício da igreja, de cor clara com detalhes arquitetônicos tradicionais, aparece parcialmente escondido por outros prédios modernos e por vegetação ao redor."
+                class="photo-grid__image"
+              />
+            </li>
+            <li class="photo-grid__galery-item">
+              <img
+                src="./images/photo-grid-4.jpg"
+                alt="Vista panorâmica de casas da cidade com pontes ligando as margens de um rio sinuoso."
+                class="photo-grid__image"
+              />
+            </li>
+            <li class="photo-grid__galery-item">
+              <img
+                src="./images/photo-grid-5.jpg"
+                alt="Vista panorâmica do campus universitário, com prédios de tijolo vermelho ao fundo de um campo verdejante."
+                class="photo-grid__image"
+              />
+            </li>
+            <li class="photo-grid__galery-item">
+              <img
+                src="./images/photo-grid-6.jpg"
+                alt="Vista de um estacionamento reservado para carros elétricos e híbridos em frente a hotel e restaurante"
+                class="photo-grid__image"
+              />
+            </li>
+            <li class="photo-grid__galery-item">
+              <img
+                src="./images/photo-grid-7.jpg"
+                alt="Vista de uma cabana tradicional no terreno do museu com um homem na frente e o prédio do museu ao fundo."
+                class="photo-grid__image"
+              />
+            </li>
+            <li class="photo-grid__galery-item">
+              <img
+                src="./images/photo-grid-8.jpg"
+                alt="Vista panorâmica de uma comunidade rural, com casas simples e um fundo verdejante de colinas."
+                class="photo-grid__image"
+              />
+            </li>
+          </ul>
+        </section>
+        <section class="leads">
+          <ul class="leads__list">
+            <li class="lead">
+              <div class="lead__content">
+                <h2 class="lead__title">Criccieth, País de Gales</h2>
+                <div class="lead__container-artist">
+                  <h3 class="lead__url-heading">ARTISTAS</h3>
+                  <p class="lead__artist">Steffan Warren, editor-chefe</p>
+                  <p class="lead__artist">
+                    Kseniya Glagoleva, gerente de projeto
+                  </p>
+                </div>
+                <div class="lead__container-paragraph">
+                  <p class="lead__paragraph">
+                    A ruína medieval do Castelo de Cricieth tem vista para a
+                    cidade abaixo de uma rocha que se projeta para o mar.
+                    Acredita-se que tenha sido construído por Llewelyn, o
+                    Grande, no século XIII. Cerca de 900 anos depois, a
+                    auto-intitulada *Pérola de Gales nas margens de Snowdonia*
+                    tornou-se um destino turístico popular durante os meses de
+                    verão.
+                  </p>
+                  <p class="lead__paragraph">
+                    A uma curta caminhada da estrada do castelo, você pode
+                    desfrutar do melhor sorvete do mundo no Cadwalader's, cujo
+                    ingrediente secreto, segundo rumores, são algas marinhas de
+                    origem local. Outra reivindicação à fama é o fato de que
+                    Criccieth ganhou o prêmio *Wales in Bloom* por cinco anos
+                    consecutivos por suas espetaculares exibições florais pela
+                    cidade. Foi também a casa de David Lloyd George, o único
+                    galês a ocupar o cargo de primeiro-ministro do Reino Unido.
+                  </p>
+                </div>
+                <img
+                  src="./images/criccieth.jpg"
+                  alt="Vista aérea de uma cidade costeira em um dia claro e ensolarado. Casas residenciais de vários estilos estão espalhadas ao longo da costa, com o mar calmo e vasto estendendo-se até o horizonte à esquerda."
+                  class="lead__image"
+                />
+                <a
+                  href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+                  class="lead__nft-link"
+                >
+                  Compre esta obra de arte como NFT
+                </a>
+              </div>
+            </li>
+            <li class="lead">
+              <div class="lead__content">
+                <h2 class="lead__title">Berea, EUA</h2>
+                <div class="lead__container-artist">
+                  <h3 class="lead__url-heading">ARTISTA</h3>
+                  <p class="lead__artist">Travis Turner, autor e editor</p>
+                </div>
+                <div class="lead__container-paragraph">
+                  <p class="lead__paragraph">
+                    Berea é uma pequena cidade localizada na parte central do
+                    Kentucky. A cidade é cercada por belas florestas e campos. É
+                    conhecida como a capital do artesanato do estado, e os
+                    visitantes encontrarão muitas oportunidades de compras:
+                    lojas com bijuterias artesanais, velas, artigos de madeira,
+                    galerias, ateliês de vidro e muito mais. A cidade realiza um
+                    festival anual que celebra o "pão de colher", um prato local
+                    feito com pão de milho e servido com uma colher de pau.
+                  </p>
+                  <p class="lead__paragraph">
+                    No entanto, provavelmente é mais conhecido pela faculdade
+                    local. O Berea College foi fundado em 1855 e foi o primeiro
+                    colégio no sul a ser racialmente integrado, bem como o
+                    primeiro a ser misto. De forma um tanto singular, não cobra
+                    mensalidades - todo aluno recebe uma bolsa de estudos
+                    integral.
+                  </p>
+                </div>
+                <img
+                  src="./images/berea.jpg"
+                  alt="Um bairro suburbano tranquilo, com a rua residencial curvada com calçadas e gramado verde ao longo da rua, casas, árvores e fios elétricos em um dia claro"
+                  class="lead__image"
+                />
+                <a
+                  href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+                  class="lead__nft-link"
+                >
+                  Compre esta obra de arte como NFT
+                </a>
+              </div>
+            </li>
+            <li class="lead">
+              <div class="lead__content">
+                <h2 class="lead__title">Muramvya, Burundi</h2>
+                <div class="lead__container-artist">
+                  <h3 class="lead__url-heading">ARTISTA</h3>
+                  <p class="lead__artist">Grevisse Kenguruka, editor técnico</p>
+                </div>
+                <div class="lead__container-paragraph">
+                  <p class="lead__paragraph">
+                    Muramvya é uma das 18 províncias de Burundi. Na era do
+                    reino, Muramvya era a capital real e em 2007, por causa de
+                    sua paisagem cultural e natural, foi adicionada à Lista
+                    Provisória do Patrimônio Mundial da UNESCO. Está localizada
+                    no centro de Burundi, entre as capitais políticas e
+                    econômicas do país.
+                  </p>
+                  <p class="lead__paragraph">
+                    O clima é bastante frio à noite, mas durante o dia, você
+                    pensaria que está no céu. A 2.665 metros (8.743 pés) acima
+                    do nível do mar, o Monte Teza é um dos lugares mais frios da
+                    província. Mas essa brisa fresca permite uma das maiores
+                    plantações de chá e café do país, que representam a maior
+                    parte das exportações do Burundi.
+                  </p>
+                  <p class="lead__paragraph">
+                    O Parque Nacional de Kibira, uma das maiores reservas de
+                    vida selvagem para macacos, se sobrepõe a quatro províncias,
+                    incluindo Muramvya. Este Parque Nacional encontra-se no
+                    ápice das belas montanhas do Congo-Nile Divide, variando
+                    entre 1.550 e 2.660 metros de altitude. Está repleta de uma
+                    bela vegetação e fonte para os vários rios e riachos que
+                    fornecem água em todo o país.
+                  </p>
+                </div>
+                <img
+                  src="./images/muramvya.jpg"
+                  alt="Monumento pintado de branco, verde e vermelho com a palavra 'UBUMWE' em ambos os lados. O monumento parece representar uma figura humana estilizada com os braços estendidos, sobre uma base elevada. Ao fundo, há uma torre de telecomunicações e algumas construções de um andar, com um campo de grama seca ao redor."
+                  class="lead__image"
+                />
+                <a
+                  href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+                  class="lead__nft-link"
+                >
+                  Compre esta obra de arte como NFT
+                </a>
+              </div>
+            </li>
+            <li class="lead">
+              <div class="lead__content">
+                <h2 class="lead__title">Brasília, Brasil</h2>
+                <div class="lead__container-artist">
+                  <h3 class="lead__url-heading">ARTISTA</h3>
+                  <p class="lead__artist">
+                    Sheyla Dias C. da Cunha, administradora
+                  </p>
+                </div>
+                <div class="lead__container-paragraph">
+                  <p class="lead__paragraph">
+                    Brasília, capital do Brasil, foi projetada para ser o centro
+                    político e administrativo do país. Inaugurado em 21 de abril
+                    de 1960, foi construído em tempo recorde, sob a liderança do
+                    então presidente Juscelino Kubitschek. Seu planejamento
+                    urbano e modernidade foi feito por Lúcio Costa (urbanista) e
+                    Oscar Niemeyer ( arquiteto ) .
+                  </p>
+                  <p class="lead__paragraph">
+                    Brasília é uma cidade única e marcante tanto pelo seu design
+                    urbano quanto pela sua importãncia política e cultural, foi
+                    inaugurada em 1960 e é reconhecida como Patrimõnio Mundial
+                    pela UNESCO.
+                  </p>
+                  <p class="lead__paragraph">
+                    Brasília é rica em atrações turísticas, com destaque para
+                    sua arquitetura icônica, monumentos históricos e belezas
+                    naturais. Principais pontos: 1. atrações arquitetônicas e
+                    culturais: Congresso Nacional; Catedral Metropolitana Nossa
+                    Senhora Aparecida; Palácio do Planalto; Memorial JK; Museu
+                    Nacional da Republica; Teatro Nacional Cláudio Santoro. 2.
+                    Praças e monumentos históricos: Praça dos Três Poderes;
+                    Panteão da Pátria e Os Candangos; Torre de TV; Ponte
+                    Juscelino Kubitschek (Ponte JK); Estádio Nacional de
+                    Brasília (Mané Garrincha). 3. Natureza e lazer: Lago
+                    Paranoá; Parque da Cidade Sarah Kubitschek; Jardim Botânico
+                    de Brasília; Parque Nacional de Brasília (Água Mineral). 4.
+                    Igrejas e templos: Santuário Dom Bosco; Templo da Boa
+                    Vontade. 5. Outros locais interessantes: Espaço Cultural
+                    Renato Russo; Complexo Cultural Funarte; Feira da Torre.
+                  </p>
+                </div>
+                <img
+                  src="./images/brasília.jpg"
+                  alt="Brasília, a capital do Brasil. Congresso Nacional."
+                  class="lead__image"
+                />
+                <a
+                  href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+                  class="lead__nft-link"
+                >
+                  Compre esta obra de arte como NFT
+                </a>
+              </div>
+            </li>
+          </ul>
+        </section>
       </main>
       <footer class="footer">
-        <p class="footer__copyright">© 2024 Sheyla Dias C. da Cunha</p>
+        <p class="footer__copyright">₢ 2024. Sheyla Dias C. da Cunha</p>
       </footer>
     </div>
   </body>
